--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,10 +2,11 @@ footer {
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 70px;
+  height: 60px;
   background-color: black;
   text-align: center;
   opacity: .9;
+  
 }
 .footer-title {
   color: rgb(219, 141, 46);
